introduce search by pin or tag
